// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMPSettingToggle matches snapshots 1`] = `
<div
  className="amp-setting-toggle"
>
  <div
    className="components-base-control components-toggle-control css-1wgfkcs-Wrapper-boxSizingReset-classes ej5x27r4"
  >
    <div
      className="components-base-control__field css-yj91it-StyledField ej5x27r3"
    >
      <div
        className="components-flex components-h-stack css-79etx6-View-Flex-base-ItemsRow e19lxcc00"
        data-wp-c16t={true}
        data-wp-component="HStack"
      >
        <span
          className="components-form-toggle is-checked"
        >
          <input
            checked={true}
            className="components-form-toggle__input"
            id="inspector-toggle-control-0"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="components-form-toggle__track"
          />
          <span
            className="components-form-toggle__thumb"
          />
        </span>
        <label
          className="components-toggle-control__label"
          htmlFor="inspector-toggle-control-0"
        >
          <div
            className="amp-setting-toggle__label-text"
          >
            <h3>
              My title
            </h3>
            <p>
              My text
            </p>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AMPSettingToggle matches snapshots 2`] = `
<div
  className="amp-setting-toggle"
>
  <div
    className="components-base-control components-toggle-control css-1wgfkcs-Wrapper-boxSizingReset-classes ej5x27r4"
  >
    <div
      className="components-base-control__field css-yj91it-StyledField ej5x27r3"
    >
      <div
        className="components-flex components-h-stack css-79etx6-View-Flex-base-ItemsRow e19lxcc00"
        data-wp-c16t={true}
        data-wp-component="HStack"
      >
        <span
          className="components-form-toggle"
        >
          <input
            checked={false}
            className="components-form-toggle__input"
            id="inspector-toggle-control-1"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="components-form-toggle__track"
          />
          <span
            className="components-form-toggle__thumb"
          />
        </span>
        <label
          className="components-toggle-control__label"
          htmlFor="inspector-toggle-control-1"
        >
          <div
            className="amp-setting-toggle__label-text"
          >
            <h3>
              My title
            </h3>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;
